--- a/TestASP.API/TestASP.API.csproj
+++ b/TestASP.API/TestASP.API.csproj
@@ -26,6 +26,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +51,7 @@
     <None Remove="Models\Request\" />
     <None Remove="Helpers\" />
     <None Remove="Services\" />
+    <None Remove="Configurations\Attributes\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
@@ -57,5 +60,6 @@
     <Folder Include="Models\Request\" />
     <Folder Include="Helpers\" />
     <Folder Include="Services\" />
+    <Folder Include="Configurations\Attributes\" />
   </ItemGroup>
 </Project>
