--- a/TestASP.API/appsettings.Development.json
+++ b/TestASP.API/appsettings.Development.json
@@ -21,6 +21,12 @@
         "Default": "Warning" // All categories of EventSource provider.
       }
     }
+  },
+  "JWT": {
+    "IsEnabled": true,
+    "ValidAudience": "http://localhost:5000",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "X4dmF109Xs9uawklhexHc1AOkvYO0jkffMIRvd9QtVGro"
   }
 }
 
