Feat - added JWT Config

--- a/TestASP.API/appsettings.json
+++ b/TestASP.API/appsettings.json
@@ -10,6 +10,15 @@
     //"TESTDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SwaggerTestDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "TESTDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SwaggerTestDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "TESTDB_LITE": "DataSource=TestDB.db;Cache=Shared"
+  },
+  "JWT": {
+    "IsEnabled": true,
+    "ValidAudience": "http://localhost:5000",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "X4dmF109Xs9uawklhexHc1AOkvYO0jkffMIRvd9QtVGro"
+  },
+  "Urls": {
+    "APIRootUrl": "http://localhost:5000/"
   }
 }
 
