--- a/.gitignore
+++ b/.gitignore
@@ -403,3 +403,32 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Oo]ut/
+[Ll]og/
+[Ll]ogs/
+
+
+
+*/[Dd]ebug/
+*/[Dd]ebugPublic/
+*/[Rr]elease/
+*/[Rr]eleases/
+*/[Bb]in/
+*/[Oo]bj/
+*/[Oo]ut/
+*/[Ll]og/
+*/[Ll]ogs/
