--- a/TestASP.API/TestASP.API.csproj
+++ b/TestASP.API/TestASP.API.csproj
@@ -43,12 +43,14 @@
     <ProjectReference Include="..\TestASP.Common\TestASP.Common.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\TestASP.Model\TestASP.Model.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Remove="Extensions\" />
     <None Remove="Models\" />
     <None Remove="Controllers\" />
-    <None Remove="Models\Request\" />
     <None Remove="Helpers\" />
     <None Remove="Services\" />
     <None Remove="Configurations\Attributes\" />
@@ -57,7 +59,6 @@
     <Folder Include="Extensions\" />
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\Request\" />
     <Folder Include="Helpers\" />
     <Folder Include="Services\" />
     <Folder Include="Configurations\Attributes\" />
