--- a/TestASP.Web/appsettings.Development.json
+++ b/TestASP.Web/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Urls": {
+    "ApiRootUrl": "https://localhost:7069"
   }
 }
