--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -84,6 +84,10 @@
         {
             "name": "API/MVC",
             "configurations": ["API", "MVC"]
+        },
+        {
+            "name": "API/MVC/Blazor",
+            "configurations": ["API", "MVC", "BlazorServer"]
         }
     ],
 }
